--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">DK Shopping List</string>
-    <string name="app_version">Версия 1.5 (v2)</string>
+    <string name="app_name">Срочно купить</string>
 </resources>
